[package]
name = "chrootable-https"
version = "0.15.1"
description = "Sandbox friendly https client"
authors = ["kpcyrd <git@rxv.cc>"]
license = "LGPL-3.0"
repository = "https://github.com/kpcyrd/chrootable-https"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "kpcyrd/chrootable-https" }

[dependencies]
failure = "0.1.1"
log = "0.4"

trust-dns = "0.17"
lru-cache = "0.1.1"

serde = "1.0"
serde_derive = "1.0"

hyper = "0.12"
http = "0.1.5"
bytes = "0.4"
byteorder = "1.2"
hyper-rustls = "0.17"
rustls = "0.16"
tokio = "0.1.8"
futures = "0.1"
ct-logs = "0.6"
webpki-roots = "0.18"

[target.'cfg(unix)'.dependencies]
resolv-conf = { version = "0.6.0", features = ["system"] }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.2"

[dev-dependencies]
env_logger = "0.7"
serde_json = "1.0"
structopt = "0.3"
